2006-03-29  Eric Anholt  <anholt@FreeBSD.org>

	* hw/kdrive/ephyr/ephyr_draw.c: (ephyrDownloadFromScreen),
	(ephyrUploadToScreen), (ephyrDrawInit):
	Add an UploadToScreen implementation, for testing PutImage support, and
	make the DownloadFromScreen more robust.

2006-03-29  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_accel.c: (exaGetImage):
	* exa/exa_priv.h:
	Bug #2986: Add acceleration of GetImage using DownloadFromScreen for the
	ZPixmap, planeMask ~= FB_ALLONES, bitsPerPixel >= 8 case.  I'm pretty
	convinced that this is the only case that we care about at all.  Tested
	with xwd -root and xwd on a gnome-terminal, in a composited environment
	or not.

2006-03-29  Eric Anholt  <anholt@FreeBSD.org>

	* hw/kdrive/ephyr/ephyr_draw.c: (ephyrDownloadFromScreen),
	(ephyrDrawInit), (exaDDXDriverInit):
	Add a DownloadFromScreen implementation, used for testing GetImage
	acceleration, and set the migration scheme to Always on init (since
	this is all for testing, and Always should make migration happen more
	frequently than Greedy).

2006-3-29   Deron Johnson  <deron.johnson@sun.com>

        * xorg/composite/compinit.c
        * xorg/composite/compwindow.c
        * xorg/dix/window.c
        * xorg/include/window.h
	Fix composite overlay window bug 6411.
	
2006-03-28  Adam Jackson  <ajax@freedesktop.org>

	* afb/afbbitblt.c:
	* afb/afbcmap.c:
	* afb/afbfillarc.c:
	* afb/afbfillrct.c:
	* afb/afbpushpxl.c:
	* afb/afbscrinit.c:
	* afb/afbzerarc.c:
	* hw/dmx/input/usb-other.c:
	* hw/xfree86/common/xf86xv.c:
	* hw/xfree86/dri/dri.c:
	* hw/xfree86/fbdevhw/fbdevhw.c:
	* hw/xfree86/i2c/fi1236.c:
	* hw/xfree86/i2c/msp3430.c:
	* hw/xfree86/i2c/uda1380.c:
	* hw/xfree86/xf4bpp/ppcGetSp.c:
	* hw/xfree86/xf8_16bpp/cfbscrinit.c:
	* hw/xfree86/xf8_32bpp/cfbimage.c:
	More warning cleanup.

2006-03-28  Kristian Høgsberg  <krh@redhat.com>

	* configure.ac: Fix another typo.
	
	* configure.ac: 
	* GL/glx/Makefile.am: Fix a couple of typos.
